02 video nuevo en section main

--- a/index-portafolio.html
+++ b/index-portafolio.html
@@ -27,13 +27,13 @@
             <img class="logo" src="./recursos/icons/LOGO VECTOR1 .png" alt="logo-pagina">
             <ul class="nav-menu">
                 <li>
-                    <a class="items-nav" href="http://www.google.com">Sobre mi</a>
+                    <a class="items-nav" href="http://www.google.com">Soy</a>
                 </li>
                 <li>
-                    <a class="items-nav" href="#">Mis trabajos</a>
+                    <a class="items-nav" href="#">Proyectos</a>
                 </li>
                 <li>
-                    <a class="items-nav" href="#">En desarrollo</a>
+                    <a class="items-nav" href="#">Avances</a>
                 </li>
                 <li>
                     <a class="items-nav" href="#">Contacto</a>
@@ -46,7 +46,7 @@
     <main>
             <div class="container-uno content">
                 <div class="ejemplo-video">
-                    <video src="../recursos/vid/videoPrueba.mp4" autoplay loop></video>
+                    <video src="../recursos/vid/reel2020.mp4" autoplay loop> </video>
                 </div>
 
             <div class="overlay"></div>
@@ -79,6 +79,18 @@
 
         <section class="galeria">
             <img class="granformato" src="" alt="">
+
+            <div class="listaimg">
+                 <!--ul>li*5>a[href="#"]{Elemento $}-->
+                 <ul class="lista">
+                    <li><a href="#">Elemento 1</a></li>
+                    <li><a href="#">Elemento 2</a></li>
+                    <li><a href="#">Elemento 3</a></li>
+                    <li><a href="#">Elemento 4</a></li>
+                    <li><a href="#">Elemento 5</a></li>
+                 </ul>
+
+            </div>
 
         </section>
 
