11 despliegue 2 https://sektor30.github.io/portafolio-version-1/index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header>
             
             <nav>
-                <img class="logo" src="./recursos/icons/LOGO VECTOR1 .png" alt="logo-pagina">
+                <img class="logo" src="../recursos/icons/LOGO VECTOR1 .png" alt="logo-pagina">
                 <ul class="nav-menu">
                     <li> 
                         <a class="items-nav" href="#">Acerca</a>
