19 v8 agregar fotos de slide

--- a/index.html
+++ b/index.html
@@ -109,14 +109,13 @@
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide"> <a href=""><img src="./recursos/icons/LOGO VECTOR1 .png" alt=""  class="imgtohover"></a> </div>
-      <div class="swiper-slide">  <a href=""> <img src="https://cdn.pixabay.com/photo/2017/04/23/19/30/earth-2254769_1280.jpg" alt="" class="imgtohover"> </a>  </div>
-      <div class="swiper-slide">  <a href=""> <img src="https://cdn.pixabay.com/photo/2016/03/26/13/09/workspace-1280538_1280.jpg" alt="" class="imgtohover"></a>  </div>
-      <div class="swiper-slide"> <a href=""> <img src="https://cdn.pixabay.com/photo/2015/01/08/18/25/desk-593327_1280.jpg" alt="" class="imgtohover"></a> </div>
-      <div class="swiper-slide"><img src="https://cdn.pixabay.com/photo/2015/01/09/11/11/office-594132_1280.jpg " alt="" class="imgtohover"></a> </div>
-      <div class="swiper-slide"><img src="https://cdn.pixabay.com/photo/2016/11/29/06/15/plans-1867745_1280.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="https://cdn.pixabay.com/photo/2015/05/28/14/53/ux-788002_1280.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="https://cdn.pixabay.com/photo/2018/02/23/04/38/computer-3174729_1280.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="https://cdn.pixabay.com/photo/2015/05/31/11/31/3d-791205_1280.jpg" alt=""></div>
+      <div class="swiper-slide">  <a href=""> <img src="./recursos/img/001.jpg" alt="" class="imgtohover"> </a>  </div>
+      <div class="swiper-slide"> <a href=""> <img src="./recursos/img/002.jpg" alt="" class="imgtohover"></a> </div>
+      <div class="swiper-slide"><img src="./recursos/img/003.jpg" alt="" class="imgtohover"></a> </div>
+      <div class="swiper-slide"><img src="./recursos/img/007.png" alt=""></div>
+      <div class="swiper-slide"><img src="./recursos/img/005.jpg" alt=""></div>
+      <div class="swiper-slide"><img src= "./recursos/img/004.png" alt=""></div>
+      <div class="swiper-slide"><img src= "./recursos/img/006.png" alt=""></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
