22 v11 cambio de contenido. adicion de proyectos,ajuste responsive

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
                 <div class="contenedorImagen">
-                    <img src="./recursos/img/ruta01.jpg" class="infoImagen" style="width: 70%;padding: 0 auto; padding-left:14em ; margin: 0 auto; align-items: center;" >
+                    <img src="./recursos/img/ruta01.jpg" class="infoImagen" style="width: 70%;padding: 0 auto; margin: 0 auto; align-items: center;" >
 
                 </div>
             
